[project]
name = "barkboard"
version = "0.1.0"
description = "Lightweight web application that retrieves random dog images from the Dog CEO API, displays them in an interactive interface, and lets users save their favorite photos."
authors = [
    {name = "Alexey",email = "axbelenkov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "sensei (>=0.1.1.post3,<0.2.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
