[project]
name = "barkboard"
version = "0.1.0"
description = "BarkBoard is like Pinterest for dogs—discover and collect adorable dog photos in a visually rich, interactive gallery."
authors = [
    {name = "Alexey",email = "axbelenkov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "sensei (>=0.1.1.post3,<0.2.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
